# POSD

./: CMakeLists.txt  Device.cpp  README.md  TextUI.cpp  Util.cpp  Util.h  Util.tpp  device.h  gateAND.cpp  gateAND.h  gateNOT.cpp  gateNOT.h  gateOR.cpp  gateOR.h  iPin.h  logicsimulator.cpp  logicsimulator.h  main.cpp  oPin.cpp  oPin.h  test.p  textui.h
.meta/: uml.mdj
Test/: test_Logicsimulator.cpp
src/: Device.h  LogicSimulator.cpp  LogicSimulator.h  TextUI.h  Util.cpp  Util.h  Util.tpp  gateAND.h  gateOR.h  iPin.cpp  logicsimulator.cpp  oPin.cpp  textui.h
